Remove <ul> margin to correctly center flex container and add column-gap

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -18,6 +18,8 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  margin-left: -40px;
+  column-gap: 10px;
 }
 
 a {
